# iot-monitor

./: .gitignore  README.md
ansible/: README.md  pyproject.toml  reset.yml  setup-access-point.yml  setup-all.yml  setup-app.yml  setup-rtc.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.yaml
ansible/roles/access-point/tasks/: main.yml
ansible/roles/access-point/templates/: pigfarm-ap.nmconnection.j2
ansible/roles/app/handlers/: main.yml
ansible/roles/app/tasks/: deploy.yml  install.yml  main.yml  setup-systemd.yml
ansible/roles/app/templates/: iot-dashboard.service.j2  iot-server.service.j2
ansible/roles/rtc/tasks/: main.yml
client/: api.py  app.py  charts.py  config.py  pyproject.toml
data/: README.md
sensor_node/: README.md  pyproject.toml
sensor_node/src/: config.py  connectivity.py  datetime_util.py  led.py  main.py  sensor.py  transport.py
server/: README.md  database.py  main.py  models.py  pyproject.toml  routes.py
server/tests/: test_server.py
